--- a/README.asciidoc
+++ b/README.asciidoc
@@ -12,9 +12,8 @@ Dependencies
 Tatlin requires the following packages:
 
 - Python 2.6+
-- PyGTK 2.24
+- wxPython
 - PyOpenGL
-- Python bindings for GtkGLExt
 - NumPy
 
 Usage
