--- a/README.asciidoc
+++ b/README.asciidoc
@@ -11,8 +11,8 @@ Dependencies
 
 Tatlin requires the following packages:
 
-- Python 2.6+
-- wxPython 2.8+
+- Python 3
+- wxPython 4+
 - PyOpenGL
 - NumPy
 
