--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tatlin (0.3.1) unstable; urgency=low
+
+  * Improved platform compatibility.
+
+ -- Denis Kobozev <d.v.kobozev@gmail.com>  Tue, 31 Oct 2023 10:48:00 -0400
+
 tatlin (0.3.0) unstable; urgency=low
 
   * Initial Release.
